--- a/1.md
+++ b/1.md
@@ -1,1 +1,2 @@
-
+<img src="https://app.diagrams.net/?title=FC.png#R7V1bc6M4Gv01qdp9cIq748ck3nT3dM9Mz%2Fb2ZnpfphSQbSqA3IDjeH79SlxsjOTYwUgIo1R125aEAJ1P303icGXeh68fYrBc%2FIo8GFwZmvd6ZU6vDONG0%2FH%2FpGCTF1iOlRfMY9%2FLi7RdwTf%2Fb5gX6mXpyvdgUpTlRSlCQeov9wtdFEXQTffKQByj9X6zGQq8vYIlmEOq4JsLArr00ffSRXFbxnhX%2FhH680V5Zt2Z5DVPwH2ex2gVFeeLUATrNZ%2FC7dmvxndXhvNzhXBHd0ns7n5cmbe7H7MArf9yFyBOKw2M%2B92PdXaR7IMPHLLIr%2F%2FoMeNpfv0hKIehwChZAA%2BtK0Xmv67M%2BxiRw8i38PUeBkQqSsQfP20egy%2FPzodf%2Fkh%2Bgu93n%2F%2Fz239HeWcP7zlkC04Mo7Rx1y8%2Fvid%2FPH%2F%2B%2FbO1AR%2B%2F%2Fnn3u7taFYdoLyBYlQgZTkDGYUmk2Y%2BzwnJsgjSuDpmWpJtCgLYt%2FAiOipEm46vp16T%2FvHkI4rkfjVK0zOu0ZVqve0JpisJKdeVsxY2UJR5yk5EfpTCOQDAiE2jkaRNHA%2B7TaDybzUbGjXcz8oB1MxobBjBMTZ9B3dvDfF58Znc8Q1HKvClSMUqyOZvdkrF8PdxLsgTR4V5mIPSDTd4PrgLhMjvUNC38CWIfBFTpdohcFKA4PzSeP%2F1Dy7q4JwO1%2B%2FbPbevd9BtVDkxjECWFIJUtswtbVzCz8h53lcXNkLoIxSG5yGr1C7nwKGU2SOFrOvKgi2KQ%2Bigq2xAlUbR4gXHqY000AoE%2FLxo8gQQSUaKH%2BTbE1Z%2FwP%2FSM%2F1v7RAtoKF3AmMwQiJYBLJHAUyEHYx8gXJwjTRUv62XSzQElsL0T2Hu03PjRnNhpbCOJPCVp7D%2Bt0rww3ChxVeIqk7hii5pdPNGtaEW%2BgeRZCasSVvmE9SuMQz9JSFeGBvGxm9QP8bU9tCGmxh5wRjZ6kLigOq5eL%2FwUflsCl9SucUiIyxZpGBTVMz8I7vOBxseamvbwoJE73IYQpNE8Bp6Px77ScJb9bU9%2F1OMvIgMyavC1EskVEcAHiEKYxnjWakWtVTj8m%2F2f613Mp0%2BKskUl3hsXZaAIM%2BfbjncBB%2F5SxBzviD90RvxRG3g8ZkvydRbA11sS6uLhgZFXfJ26AcAS4B4Zf%2FJ3bPwzQXzv0ENvL7CmB74ytDZjZMuyGAZ4Trzsh%2BOs4S7O8BX52awtcDUsew%2FYmxpgCVrFLiwOqgaJtX5M4%2B1%2BUqxGYUr1g8EAm0qzJWmQHL5cU2OeZidJeYc7udoOaHNRMw6Guifreoel639DB9VKTZKJ%2BtuX00LLTV1I4lhcUOq%2F26Ii9D2PHH4XQ3wd4CnrikhyMcK4X%2Fvuyp6SvlYpyq8165qXBjGcfRVi0yrEYsi5wUuD2BSsJDpMsOsSEHd7lcDcuhao3WY9%2FptcWEK%2BwATGL3AvK4Bt63IT58kiLUVkFGOUkqxb7gGRJFzuI7VoIh4eTPx3xCrsqS9eAJvmUYB1g4GwwwthR6yNOGAWzhh7SWzEFrVN7fd7jQTV0dlWYk8%2BWtD14%2FN1vc3S9T9gMihlP64BbXas7G8oXJn5wHQBSbG7ANG8mnsBHlgWeRfcpKLJScSgPfrZBZDOQBDguU5mXOi%2FkgNIg1a1%2FQ1b2XQQA2xn77EgYMIL1YlS8FwUPIVYUwVvSqfgdVbgqDT82Rre7FrD66ZSBq0oA0rNTybXdjN1YNb9PbqrlvIChmMfONPBa9MOXRvXZIJucdI%2Fg8sm1AAf0%2FrHFKp%2F6HzCSUvOWgjKRRKsQcgd5msnaJY7m36cTek8HVEW1jzQVh3MIuMsXTqBhbDYfIJOJxSmqIB4DaJt1ifwQ5%2F8WGShQAY4SRm52ZIO1s4QZGDuwMWxAvEetDyc8K%2Fhdb4Q4xdwb8pWeXF5YATXFUHAArRKyMcT6Ry8AD%2FIJmpxUcXxWrbkkYtQAsKsGsZh0rIQnRClCBGimi0zJyeGLLrGTYjoUFT5KU38lHqsYdchaxq02HUF0n3Qwgp0VdBydtBi6x0HLWXHvXca5MlK2Sw3gaXiubkJBivFoDT8%2BZGo1XTdoR6HUh1xikLL85wag9bac1rONjgZk6FFoPY%2B2CzfUmgEatAZsHcaE%2FkjT15g1oNNk7W2ITTYNFhLkcqKnG9FnLasiGOfZkVaU9x0FMDYsZIlGW7TYqs4ika%2FochFYQhj1wfB6NsCo0daBP4z%2BfziY5WbkIRDi1OZbFt8eJAh%2Fjf1mndYblOryJ4hdF6btMt%2FCooHcBMPG5YlolKm1K5IbhDWpx1j76lgCAU7%2BHhA482fxZhnP36QH9eOMy4Lpq%2FV6umm%2BusrjH1848StolFrZS9rrvjeGjFbKpNg1bYi6pOGC1y2XevIOW15qy2TYLJ8eSGSeK1pk5o06o2ksX2%2F47g0OlJL4%2FbZ7nOlcev5iJJG1hK8iizfbfHs%2BtI0Yyet0MjS5LVoPbT8szU5MEO7SkCbJ%2B2CPxJTkOmpTbFef8nVoKE9ovg56dJLFeKZOjXPlLXL1dCEeqb0CvVpcHYCYOcPtdUBNExGdCgWQLWltaWsj7mfnbWbbmmlMggnrg635VSV5kA5VWem62sPOtpdO1UWL295aE5VHVlWgkioU2Wx3OX%2B5Icu1iZYtRU7S7OuJzfNzIKj11b%2FTnzSoTWzQDvuylFoJhQ3%2B0JhGM2For7PQLSv0NT9r0Rzg3P6TYYjINbpt%2Bil3hNgG1x4bdlm10Dx2oc5MF%2FcrsVUZtcPb9i8gqyh%2BeJ2jZ9lawEF%2BOKPkZF8%2FPnj%2Fq%2F%2F%2FWJ%2FXE38%2B%2BdpymD5%2BB6lfhoQ5g7tC9iQnVAnDUVtJ98p52bxT0jKYaY4UhUtmuJIVQLbM4FVHKlKXHslroojVQlrT4R1UBypb4UOfeBIZd6A4CcIGu4rfWPoJUkRK47Uo6LGeqh9WByprWiQDjlSmTdw0hMnO9QumiO1FYC75Ehl3kGZiZV8HVF%2BI3GZJKlsmVEceu1ogw5ZUtnAGhSww6JJ5REGCKVJZcPaD2rE%2Fun4y%2BBJZcuMeuSDi44XyZPKBrYfG8fkVwaKJ5VnQoHBtTi0rTYtZRS640llA0tnJftJedYCTyqXlIJQnlQ2xHQ2UPGkcuNJ5RGziOVJZQtRP56Ek99PuUyeVObAM%2Bg0VdDSQtAikieVDSydceyn0yBPWkooTyobVDrbqDR8Ew2veFJ5RKAMOk0VgTaJQDvkSWUDS6c2h8CTyiXYFMqTykZT5TP5WJE%2B8KSyJaKFp2B7xJPazrzukieVjWKjh2L7yZPaDoRd8qSyIRT8qhs5eFLfALPKTMlsV%2FJ5SmIS%2BsiTypZEwclEeXhSz5JGU2pp7ANPKntceaUpBxZZdsmTygZWbYxsKVfZIU%2Fqm4Z5aDypraDZKU%2Fqm5bt8nlSuQAolCeVDaBgir3Lzfr0kCeVLRGsPKByqt6fru%2BQJ5UNLK%2BdgENzqrrkSWUjK%2FgBZTl4UuW3CT3lSWXLWD9et90HoeglTypbKFp4k97gnH6hPKnMW2BQ4fecJ5ULUEJ5UtlA8cqDDcwX75InlQ0snQZTvniz1LVkPKmMt1GII0plvjBBUiYzxZSqyNEUU6oS2J4JrGJKVeLaK3FVTKlKWHsirINnSt0GD72lShX9Oq0W95Zacu3SU2Spx4WthRXNC2RLfb8WkY0u9bQXee1wGxxf6vshlo4w1ervgqJklmJAjKncXhzX87z5%2B%2FWBbJSpjDfHKcrUs%2BOB7jlTbdYSplLzijT1TaFRy6N81HznrKk2iwxEqQNFmyoZbarNi7Z5eKkFyXhTbTpD2U8KNE68qeenFronTrXpxKAiThVKnHp25CIBc6ot%2BLGKy%2FVVBkSdarfwBjcVujBCl865U20699hPx0Gi%2FFT35Kllx0rJK%2FZUGdlTHfUISEuBqGz0qQ6d5Bwqfer5MWf3%2FKmOymwqAtWaSNBJxKERqDaY2dIxqDp0xnBQDKoNMJSOQtVhbRXkqJ3lpVAt0TzKWlmGZpJYhYvhUHU6Y2uRkUP1dHHUpRbH3pKoOrwSlkMLMKVjUXXUZsm2spay0aiWtlnRqDaBUz4e1TGd5RsQj%2Br5CHZPpDqms3lcvboLTv9cCpPqWL34rKXUvWxUqmNeuwMH51lJx6U6FvwAs7xcqpKZhUsiUx0LzkZeslRcDpvquNmb2nrNpnq%2B6989neqYzqBdIJ3q%2BUh1z6c65pURG5pHLh2hamnAlUd%2BfhpbGKMq%2FhkjMto7K4rV2%2BJX5EHS4v8%3D" width="51%" align="right" hspace="20" vspace="20">
+  
