--- a/1.md
+++ b/1.md
@@ -1,3 +1,3 @@
  
- <img src="https://tinyurl.com/yb8dygfw" width="51%" align="right" hspace="20" vspace="20"></img>
+ <img src="file:///tmp/mozilla_jaydev0/FC-1.webp" width="51%" align="right" hspace="20" vspace="20"></img>
 
