--- a/1.md
+++ b/1.md
@@ -1,3 +1,2 @@
  
- <img src="file:///tmp/mozilla_jaydev0/FC-1.webp" width="51%" align="right" hspace="20" vspace="20"></img>
-
+<a href="https://ibb.co/8Xc6QVg"><img src="https://i.ibb.co/jHRgjFk/FC.png" alt="FC" border="0"></a>
