--- a/1.md
+++ b/1.md
@@ -1,2 +1,3 @@
+![Risk Assessment flow diagram](https://i.ibb.co/KKC5XCX/risk_assess.png)
  
-<a href="https://ibb.co/8Xc6QVg"><img src="https://i.ibb.co/jHRgjFk/FC.png" alt="FC" border="0"></a>
+
