--- a/1.md
+++ b/1.md
@@ -1,3 +1,3 @@
-![Risk Assessment flow diagram](https://i.ibb.co/KKC5XCX/risk_assess.png)
+![Risk Assessment flow diagram](https://i.ibb.co/SVXcWV5/riasmnt.png)
  
 
