--- a/1.md
+++ b/1.md
@@ -1,3 +1,5 @@
-![Risk Assessment flow diagram](https://i.ibb.co/SVXcWV5/riasmnt.png)
+<img src="https://i.ibb.co/SVXcWV5/riasmnt.png" width="51%" align="right" hspace="20" vspace="20">
+
+
  
 
