--- a/1.md
+++ b/1.md
@@ -1,5 +1,4 @@
-<img src="https://i.ibb.co/SVXcWV5/riasmnt.png" width="71%" align="left" hspace="20" vspace="20">
-
+![Risk Assessment](https://i.ibb.co/SVXcWV5/riasmnt.png)
 
  
 
